# cmake_conan_grpc_template

./: .clang-format  CMakeLists.txt  README.md  conanfile.txt
configured_files/: config.hpp.in
src/: CMakeLists.txt  main.cpp
src/client_hw/: main.cpp
src/server_hw/: main.cpp
test/: CMakeLists.txt  tests.cpp
